--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,7 @@ jobs:
             - name: Run a one-line script
               run: |
                 echo Hello, world! We are building the project.
+                npm install
                 npm run build
     test:
         runs-on: ubuntu-latest
